--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-notifications-component": "^4.0.1",
     "reactstrap": "^9.1.4"
   },
   "devDependencies": {
